--- a/package.json
+++ b/package.json
@@ -1,128 +1,87 @@
 {
-  "name": "Anduin-ui",
+  "name": "Anduin",
   "version": "0.0.1",
   "description": "A Component Library for Vue.js.",
-  "main": "lib/element-ui.common.js",
-  "files": [
-    "lib",
-    "src",
-    "packages"
-  ],
+  "author": "Thstone37 <82461760@qq.com>",
+  "private": true,
   "scripts": {
-    "bootstrap": "yarn || npm i",
-    "build:file": "node build/bin/iconInit.js & node build/bin/build-entry.js & node build/bin/i18n.js & node build/bin/version.js",
-    "build:theme": "node build/bin/gen-cssfile && gulp build --gulpfile packages/theme-default/gulpfile.js && cp-cli packages/theme-default/lib lib/theme-default",
-    "build:utils": "cross-env BABEL_ENV=utils babel src --out-dir lib --ignore src/index.js",
-    "build:umd": "node build/bin/build-locale.js",
-    "clean": "rimraf lib && rimraf packages/*/lib && rimraf test/**/coverage && lerna clean --yes",
-    "deploy": "npm run deploy:build && gh-pages -d examples/element-ui --remote eleme && del examples/element-ui",
-    "deploy:build": "npm run build:file && cooking build -c build/cooking.demo.js -p && echo element.eleme.io>>examples/element-ui/CNAME",
-    "dev": "npm run bootstrap && npm run build:file && cooking watch -c build/cooking.demo.js -p",
-    "dev:play": "npm run build:file && cross-env PLAY_ENV=true cooking watch -c build/cooking.demo.js -p",
-    "dist": "npm run clean && npm run build:file && npm run lint && cooking build -c build/cooking.conf.js,build/cooking.common.js,build/cooking.component.js -p && npm run build:utils && npm run build:umd && npm run build:theme",
-    "dist:all": "node build/bin/build-all.js && npm run build:theme",
-    "i18n": "node build/bin/i18n.js",
-    "lint": "eslint src/**/* test/**/* packages/**/*.{js,vue} build/**/* --quiet",
-    "pub": "npm run bootstrap && sh build/git-release.sh && sh build/release.sh",
-    "pub:all": "npm run dist:all && lerna publish --skip-git && git commit -am 'publish independent packages' && git push eleme dev",
-    "test": "npm run lint && cross-env CI_ENV=/dev/ karma start test/unit/karma.conf.js --single-run",
-    "test:watch": "karma start test/unit/karma.conf.js"
+    "dev": "node build/dev-server.js",
+    "build": "node build/build.js",
+    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
+    "e2e": "node test/e2e/runner.js",
+    "test": "npm run unit && npm run e2e",
+    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:Thstone37/Anduin.git"
-  },
-  "homepage": "http://element.eleme.io",
-  "keywords": [
-    "Anduin",
-    "vue",
-    "components"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Thstone37/Anduin/issues"
-  },
-  "unpkg": "lib/index.js",
-  "style": "lib/theme-default/index.css",
   "dependencies": {
-    "async-validator": "^1.6.6",
-    "babel-helper-vue-jsx-merge-props": "^2.0.0",
-    "deepmerge": "^1.2.0",
-    "throttle-debounce": "^1.0.1"
-  },
-  "peerDependencies": {
-    "vue": "^2.1.6"
+    "vue": "^2.1.10",
+    "babel-helper-vue-jsx-merge-props": "^2.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-module-resolver": "^2.2.0",
+    "autoprefixer": "^6.7.2",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
     "babel-plugin-syntax-jsx": "^6.8.0",
     "babel-plugin-transform-vue-jsx": "^3.3.0",
-    "babel-preset-es2015": "^6.14.0",
-    "chai": "^3.5.0",
-    "cheerio": "^0.18.0",
-    "cooking": "^1.2.0",
-    "cooking-lint": "^0.1.3",
-    "cooking-vue2": "^0.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "coveralls": "^2.11.14",
-    "cp-cli": "^1.0.2",
-    "cross-env": "^3.1.3",
-    "css-loader": "^0.24.0",
-    "es6-promise": "^4.0.5",
-    "eslint": "^3.10.2",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "file-save": "^0.2.0",
-    "gh-pages": "^0.11.0",
-    "gulp": "^3.9.1",
-    "gulp-cssmin": "^0.1.7",
-    "gulp-postcss": "^6.1.1",
-    "highlight.js": "^9.3.0",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.22.0",
-    "inject-loader": "^3.0.0-beta2",
-    "isparta-loader": "^2.0.0",
-    "json-loader": "^0.5.4",
-    "json-templater": "^1.0.4",
-    "karma": "^1.3.0",
+    "babel-register": "^6.22.0",
+    "chalk": "^1.1.3",
+    "connect-history-api-fallback": "^1.3.0",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.14.1",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-html": "^2.0.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.2",
+    "file-loader": "^0.10.0",
+    "friendly-errors-webpack-plugin": "^1.1.3",
+    "function-bind": "^1.1.0",
+    "html-webpack-plugin": "^2.28.0",
+    "http-proxy-middleware": "^0.17.3",
+    "webpack-bundle-analyzer": "^2.2.1",
+    "cross-env": "^3.1.4",
+    "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.2.0",
+    "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sinon-chai": "^1.2.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.8.0",
-    "lerna": "^2.0.0-beta.32",
-    "lolex": "^1.5.1",
-    "markdown-it": "^6.1.1",
-    "markdown-it-anchor": "^2.5.0",
-    "markdown-it-container": "^2.0.0",
-    "mocha": "^3.1.1",
-    "offline-plugin": "^4.6.1",
-    "phantomjs-prebuilt": "^2.1.13",
-    "postcss": "^5.1.2",
-    "postcss-loader": "^0.11.1",
-    "postcss-salad": "^1.0.8",
-    "rimraf": "^2.5.4",
-    "sinon": "^1.17.6",
+    "karma-webpack": "^2.0.2",
+    "lolex": "^1.5.2",
+    "mocha": "^3.2.0",
+    "chai": "^3.5.0",
+    "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.1",
-    "theaterjs": "^3.0.0",
-    "transliteration": "^1.1.11",
-    "uppercamelcase": "^1.1.0",
+    "inject-loader": "^2.0.1",
+    "babel-plugin-istanbul": "^3.1.2",
+    "phantomjs-prebuilt": "^2.1.14",
+    "chromedriver": "^2.27.2",
+    "cross-spawn": "^5.0.1",
+    "nightwatch": "^0.9.12",
+    "selenium-server": "^3.0.1",
+    "semver": "^5.3.0",
+    "opn": "^4.0.2",
+    "ora": "^1.1.0",
+    "shelljs": "^0.7.6",
     "url-loader": "^0.5.7",
-    "vue": "^2.1.8",
     "vue-loader": "^10.3.0",
-    "vue-markdown-loader": "^0.5.1",
-    "vue-router": "^2.0.0",
-    "vue-template-compiler": "^2.1.8",
-    "vue-template-es2015-compiler": "^1.4.2",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.1",
-    "webpack-node-externals": "^1.5.4"
+    "vue-style-loader": "^2.0.0",
+    "vue-template-compiler": "^2.1.10",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.16.1",
+    "webpack-merge": "^2.6.1"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 2.15.8"
   }
 }
