--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "friendly-errors-webpack-plugin": "^1.3.1",
     "function-bind": "^1.1.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-cssmin": "^0.1.7",
     "gulp-sass": "^3.1.0",
     "html-webpack-plugin": "^2.28.0",
