--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "node build/build.js",
     "example-build": "node build/example-build.js",
     "example-dev": "node build/example-dev-server.js",
+    "flow": "flow check",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
@@ -28,6 +29,7 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.3.0",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-flow-vue": "^1.0.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
@@ -48,12 +50,14 @@
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.2",
     "file-loader": "^0.10.0",
+    "flow-bin": "^0.45.0",
     "friendly-errors-webpack-plugin": "^1.3.1",
     "function-bind": "^1.1.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cssmin": "^0.1.7",
     "gulp-sass": "^3.1.0",
+    "gulp-rev":"https://github.com/Thstone37/gulp-rev.git",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^2.0.1",
@@ -78,6 +82,7 @@
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.7",
+    "vue-i18n": "^6.1.1",
     "vue-loader": "^11.0.0",
     "vue-router": "^2.2.1",
     "vue-style-loader": "^2.0.0",
