--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "shelljs": "^0.7.6",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
+    "throttle-debounce": "^1.0.1",
     "url-loader": "^0.5.7",
     "vue-i18n": "^5.0.3",
     "vue-loader": "^11.0.0",
